samples/_failures_safe/1761552525_0fdce9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24cdb30b.c: In function ‘main’:
./samples/SAFE/__tmp_24cdb30b.c:150:5: error: expected expression at end of input
  150 |     printf("Compressed size: %zu bytes\n",
      |     ^~~~~~
./samples/SAFE/__tmp_24cdb30b.c:150:5: error: expected declaration or statement at end of input
